compiler/y.output
Grammar

    0 $accept: translation_unit $end

    1 translation_unit: initial_declaration definition_or_statement
    2                 | translation_unit definition_or_statement

    3 initial_declaration: /* empty */
    4                    | require_list rename_list
    5                    | require_list
    6                    | rename_list

    7 require_list: require_declaration
    8             | require_list require_declaration

    9 require_declaration: REQUIRE package_name SEMICOLON

   10 package_name: IDENTIFIER
   11             | package_name DOT IDENTIFIER

   12 rename_list: rename_declaration
   13            | rename_list rename_declaration

   14 rename_declaration: RENAME package_name IDENTIFIER SEMICOLON

   15 definition_or_statement: function_definition
   16                        | class_definition
   17                        | statement
   18                        | delegate_definition
   19                        | enum_definition
   20                        | const_definition

   21 basic_type_specifier: VOID_T
   22                     | BOOLEAN_T
   23                     | INT_T
   24                     | DOUBLE_T
   25                     | STRING_T
   26                     | NATIVE_POINTER_T

   27 identifier_type_specifier: IDENTIFIER

   28 array_type_specifier: basic_type_specifier LB RB
   29                     | IDENTIFIER LB RB
   30                     | array_type_specifier LB RB

   31 type_specifier: basic_type_specifier
   32               | array_type_specifier
   33               | identifier_type_specifier

   34 function_definition: type_specifier IDENTIFIER LP parameter_list RP throws_clause block
   35                    | type_specifier IDENTIFIER LP RP throws_clause block
   36                    | type_specifier IDENTIFIER LP parameter_list RP throws_clause SEMICOLON
   37                    | type_specifier IDENTIFIER LP RP throws_clause SEMICOLON

   38 parameter_list: type_specifier IDENTIFIER
   39               | parameter_list COMMA type_specifier IDENTIFIER

   40 argument_list: assignment_expression
   41              | argument_list COMMA assignment_expression

   42 statement_list: statement
   43               | statement_list statement

   44 expression: assignment_expression
   45           | expression COMMA assignment_expression

   46 assignment_expression: logical_or_expression
   47                      | primary_expression assignment_operator assignment_expression

   48 assignment_operator: ASSIGN_T
   49                    | ADD_ASSIGN_T
   50                    | SUB_ASSIGN_T
   51                    | MUL_ASSIGN_T
   52                    | DIV_ASSIGN_T
   53                    | MOD_ASSIGN_T

   54 logical_or_expression: logical_and_expression
   55                      | logical_or_expression LOGICAL_OR logical_and_expression

   56 logical_and_expression: equality_expression
   57                       | logical_and_expression LOGICAL_AND equality_expression

   58 equality_expression: relational_expression
   59                    | equality_expression EQ relational_expression
   60                    | equality_expression NE relational_expression

   61 relational_expression: additive_expression
   62                      | relational_expression GT additive_expression
   63                      | relational_expression GE additive_expression
   64                      | relational_expression LT additive_expression
   65                      | relational_expression LE additive_expression

   66 additive_expression: multiplicative_expression
   67                    | additive_expression ADD multiplicative_expression
   68                    | additive_expression SUB multiplicative_expression

   69 multiplicative_expression: unary_expression
   70                          | multiplicative_expression MUL unary_expression
   71                          | multiplicative_expression DIV unary_expression
   72                          | multiplicative_expression MOD unary_expression
   73                          | multiplicative_expression BIT_AND unary_expression
   74                          | multiplicative_expression BIT_OR unary_expression
   75                          | multiplicative_expression BIT_XOR unary_expression

   76 unary_expression: postfix_expression
   77                 | SUB unary_expression
   78                 | EXCLAMATION unary_expression
   79                 | BIT_NOT unary_expression

   80 postfix_expression: primary_expression
   81                   | primary_expression INCREMENT
   82                   | primary_expression DECREMENT
   83                   | primary_expression INSTANCEOF type_specifier

   84 primary_expression: primary_no_new_array
   85                   | array_creation
   86                   | IDENTIFIER

   87 primary_no_new_array: primary_no_new_array LB expression RB
   88                     | IDENTIFIER LB expression RB
   89                     | primary_expression DOT IDENTIFIER
   90                     | primary_expression LP argument_list RP
   91                     | primary_expression LP RP
   92                     | LP expression RP
   93                     | primary_expression DOWN_CAST_BEGIN type_specifier DOWN_CAST_END
   94                     | INT_LITERAL
   95                     | DOUBLE_LITERAL
   96                     | STRING_LITERAL
   97                     | REGEXP_LITERAL
   98                     | TRUE_T
   99                     | FALSE_T
  100                     | NULL_T
  101                     | array_literal
  102                     | THIS_T
  103                     | SUPER_T
  104                     | NEW IDENTIFIER LP RP
  105                     | NEW IDENTIFIER LP argument_list RP
  106                     | NEW IDENTIFIER DOT IDENTIFIER LP RP
  107                     | NEW IDENTIFIER DOT IDENTIFIER LP argument_list RP

  108 array_literal: LC RC
  109              | LC expression_list RC
  110              | LC expression_list COMMA RC

  111 array_creation: NEW basic_type_specifier dimension_expression_list
  112               | NEW basic_type_specifier dimension_expression_list dimension_list
  113               | NEW identifier_type_specifier dimension_expression_list
  114               | NEW identifier_type_specifier dimension_expression_list dimension_list

  115 dimension_expression_list: dimension_expression
  116                          | dimension_expression_list dimension_expression

  117 dimension_expression: LB expression RB

  118 dimension_list: LB RB
  119               | dimension_list LB RB

  120 expression_list: assignment_expression
  121                | expression_list COMMA assignment_expression

  122 statement: expression SEMICOLON
  123          | if_statement
  124          | switch_statement
  125          | while_statement
  126          | for_statement
  127          | do_while_statement
  128          | foreach_statement
  129          | return_statement
  130          | break_statement
  131          | continue_statement
  132          | try_statement
  133          | throw_statement
  134          | declaration_statement

  135 if_statement: IF LP expression RP block
  136             | IF LP expression RP block ELSE block
  137             | IF LP expression RP block elsif_list
  138             | IF LP expression RP block elsif_list ELSE block

  139 elsif_list: elsif
  140           | elsif_list elsif

  141 elsif: ELSIF LP expression RP block

  142 label_opt: /* empty */
  143          | IDENTIFIER COLON

  144 switch_statement: SWITCH LP expression RP case_list default_opt

  145 case_list: one_case
  146          | case_list one_case

  147 one_case: CASE case_expression_list block

  148 default_opt: /* empty */
  149            | DEFAULT_T block

  150 case_expression_list: assignment_expression
  151                     | expression_list COMMA assignment_expression

  152 while_statement: label_opt WHILE LP expression RP block

  153 for_statement: label_opt FOR LP expression_opt SEMICOLON expression_opt SEMICOLON expression_opt RP block

  154 do_while_statement: label_opt DO_T block WHILE LP expression RP SEMICOLON

  155 foreach_statement: label_opt FOREACH LP IDENTIFIER COLON expression RP block

  156 expression_opt: /* empty */
  157               | expression

  158 return_statement: RETURN_T expression_opt SEMICOLON

  159 identifier_opt: /* empty */
  160               | IDENTIFIER

  161 break_statement: BREAK identifier_opt SEMICOLON

  162 continue_statement: CONTINUE identifier_opt SEMICOLON

  163 try_statement: TRY block catch_list FINALLY block
  164              | TRY block FINALLY block
  165              | TRY block catch_list

  166 catch_list: catch_clause
  167           | catch_list catch_clause

  168 @1: /* empty */

  169 catch_clause: CATCH @1 LP type_specifier IDENTIFIER RP block

  170 throw_statement: THROW expression SEMICOLON
  171                | THROW SEMICOLON

  172 declaration_statement: type_specifier IDENTIFIER SEMICOLON
  173                      | type_specifier IDENTIFIER ASSIGN_T expression SEMICOLON
  174                      | FINAL type_specifier IDENTIFIER SEMICOLON
  175                      | FINAL type_specifier IDENTIFIER ASSIGN_T expression SEMICOLON

  176 @2: /* empty */

  177 block: LC @2 statement_list RC
  178      | LC RC

  179 @3: /* empty */

  180 class_definition: class_or_interface IDENTIFIER extends LC @3 member_declaration_list RC

  181 @4: /* empty */

  182 class_definition: class_or_member_modifier_list class_or_interface IDENTIFIER extends LC @4 member_declaration_list RC

  183 @5: /* empty */

  184 class_definition: class_or_interface IDENTIFIER extends LC @5 RC

  185 @6: /* empty */

  186 class_definition: class_or_member_modifier_list class_or_interface IDENTIFIER extends LC @6 RC

  187 class_or_member_modifier_list: class_or_member_modifier
  188                              | class_or_member_modifier_list class_or_member_modifier

  189 class_or_member_modifier: access_modifier
  190                         | VIRTUAL_T
  191                         | OVERRIDE_T
  192                         | ABSTRACT_T

  193 class_or_interface: CLASS_T
  194                   | INTERFACE_T

  195 extends: /* empty */
  196        | COLON extends_list

  197 extends_list: IDENTIFIER
  198             | extends_list COMMA IDENTIFIER

  199 member_declaration_list: member_declaration
  200                        | member_declaration_list member_declaration

  201 member_declaration: method_member
  202                   | field_member

  203 method_member: method_function_definition
  204              | class_or_member_modifier_list method_function_definition
  205              | constructor_definition
  206              | class_or_member_modifier_list constructor_definition

  207 method_function_definition: type_specifier IDENTIFIER LP parameter_list RP throws_clause block
  208                           | type_specifier IDENTIFIER LP RP throws_clause block
  209                           | type_specifier IDENTIFIER LP parameter_list RP throws_clause SEMICOLON
  210                           | type_specifier IDENTIFIER LP RP throws_clause SEMICOLON

  211 throws_clause: /* empty */
  212              | THROWS exception_list

  213 exception_list: IDENTIFIER
  214               | exception_list COMMA IDENTIFIER

  215 constructor_definition: CONSTRUCTOR IDENTIFIER LP parameter_list RP throws_clause block
  216                       | CONSTRUCTOR IDENTIFIER LP RP throws_clause block
  217                       | CONSTRUCTOR IDENTIFIER LP parameter_list RP throws_clause SEMICOLON
  218                       | CONSTRUCTOR IDENTIFIER LP RP throws_clause SEMICOLON

  219 access_modifier: PUBLIC_T
  220                | PRIVATE_T

  221 initializer_opt: /* empty */
  222                | ASSIGN_T expression

  223 field_member: type_specifier IDENTIFIER initializer_opt SEMICOLON
  224             | class_or_member_modifier_list type_specifier IDENTIFIER initializer_opt SEMICOLON
  225             | FINAL type_specifier IDENTIFIER initializer_opt SEMICOLON
  226             | class_or_member_modifier_list FINAL type_specifier IDENTIFIER initializer_opt SEMICOLON

  227 delegate_definition: DELEGATE type_specifier IDENTIFIER LP parameter_list RP throws_clause SEMICOLON
  228                    | DELEGATE type_specifier IDENTIFIER LP RP throws_clause SEMICOLON

  229 enum_definition: ENUM IDENTIFIER LC enumerator_list RC
  230                | ENUM IDENTIFIER LC enumerator_list COMMA RC

  231 enumerator_list: IDENTIFIER
  232                | enumerator_list COMMA IDENTIFIER

  233 const_definition: CONST IDENTIFIER ASSIGN_T expression SEMICOLON
  234                 | CONST type_specifier IDENTIFIER SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256)
INT_LITERAL (258) 94
DOUBLE_LITERAL (259) 95
STRING_LITERAL (260) 96
REGEXP_LITERAL (261) 97
IDENTIFIER (262) 10 11 14 27 29 34 35 36 37 38 39 86 88 89 104 105
    106 107 143 155 160 169 172 173 174 175 180 182 184 186 197 198
    207 208 209 210 213 214 215 216 217 218 223 224 225 226 227 228
    229 230 231 232 233 234
IF (263) 135 136 137 138
ELSE (264) 136 138
ELSIF (265) 141
SWITCH (266) 144
CASE (267) 147
DEFAULT_T (268) 149
WHILE (269) 152 154
DO_T (270) 154
FOR (271) 153
FOREACH (272) 155
RETURN_T (273) 158
BREAK (274) 161
CONTINUE (275) 162
NULL_T (276) 100
LP (277) 34 35 36 37 90 91 92 104 105 106 107 135 136 137 138 141 144
    152 153 154 155 169 207 208 209 210 215 216 217 218 227 228
RP (278) 34 35 36 37 90 91 92 104 105 106 107 135 136 137 138 141 144
    152 153 154 155 169 207 208 209 210 215 216 217 218 227 228
LC (279) 108 109 110 177 178 180 182 184 186 229 230
RC (280) 108 109 110 177 178 180 182 184 186 229 230
LB (281) 28 29 30 87 88 117 118 119
RB (282) 28 29 30 87 88 117 118 119
SEMICOLON (283) 9 14 36 37 122 153 154 158 161 162 170 171 172 173
    174 175 209 210 217 218 223 224 225 226 227 228 233 234
COLON (284) 143 155 196
COMMA (285) 39 41 45 110 121 151 198 214 230 232
ASSIGN_T (286) 48 173 175 222 233
LOGICAL_AND (287) 57
LOGICAL_OR (288) 55
EQ (289) 59
NE (290) 60
GT (291) 62
GE (292) 63
LT (293) 64
LE (294) 65
ADD (295) 67
SUB (296) 68 77
MUL (297) 70
DIV (298) 71
MOD (299) 72
BIT_AND (300) 73
BIT_OR (301) 74
BIT_XOR (302) 75
BIT_NOT (303) 79
TRUE_T (304) 98
FALSE_T (305) 99
EXCLAMATION (306) 78
DOT (307) 11 89 106 107
ADD_ASSIGN_T (308) 49
SUB_ASSIGN_T (309) 50
MUL_ASSIGN_T (310) 51
DIV_ASSIGN_T (311) 52
MOD_ASSIGN_T (312) 53
INCREMENT (313) 81
DECREMENT (314) 82
TRY (315) 163 164 165
CATCH (316) 169
FINALLY (317) 163 164
THROW (318) 170 171
THROWS (319) 212
VOID_T (320) 21
BOOLEAN_T (321) 22
INT_T (322) 23
DOUBLE_T (323) 24
STRING_T (324) 25
NATIVE_POINTER_T (325) 26
NEW (326) 104 105 106 107 111 112 113 114
REQUIRE (327) 9
RENAME (328) 14
CLASS_T (329) 193
INTERFACE_T (330) 194
PUBLIC_T (331) 219
PRIVATE_T (332) 220
VIRTUAL_T (333) 190
OVERRIDE_T (334) 191
ABSTRACT_T (335) 192
THIS_T (336) 102
SUPER_T (337) 103
CONSTRUCTOR (338) 215 216 217 218
INSTANCEOF (339) 83
DOWN_CAST_BEGIN (340) 93
DOWN_CAST_END (341) 93
DELEGATE (342) 227 228
FINAL (343) 174 175 225 226
ENUM (344) 229 230
CONST (345) 233 234


Nonterminals, with rules where they appear

$accept (91)
    on left: 0
translation_unit (92)
    on left: 1 2, on right: 0 2
initial_declaration (93)
    on left: 3 4 5 6, on right: 1
require_list (94)
    on left: 7 8, on right: 4 5 8
require_declaration (95)
    on left: 9, on right: 7 8
package_name (96)
    on left: 10 11, on right: 9 11 14
rename_list (97)
    on left: 12 13, on right: 4 6 13
rename_declaration (98)
    on left: 14, on right: 12 13
definition_or_statement (99)
    on left: 15 16 17 18 19 20, on right: 1 2
basic_type_specifier (100)
    on left: 21 22 23 24 25 26, on right: 28 31 111 112
identifier_type_specifier (101)
    on left: 27, on right: 33 113 114
array_type_specifier (102)
    on left: 28 29 30, on right: 30 32
type_specifier (103)
    on left: 31 32 33, on right: 34 35 36 37 38 39 83 93 169 172 173
    174 175 207 208 209 210 223 224 225 226 227 228 234
function_definition (104)
    on left: 34 35 36 37, on right: 15
parameter_list (105)
    on left: 38 39, on right: 34 36 39 207 209 215 217 227
argument_list (106)
    on left: 40 41, on right: 41 90 105 107
statement_list (107)
    on left: 42 43, on right: 43 177
expression (108)
    on left: 44 45, on right: 45 87 88 92 117 122 135 136 137 138 141
    144 152 154 155 157 170 173 175 222 233
assignment_expression (109)
    on left: 46 47, on right: 40 41 44 45 47 120 121 150 151
assignment_operator (110)
    on left: 48 49 50 51 52 53, on right: 47
logical_or_expression (111)
    on left: 54 55, on right: 46 55
logical_and_expression (112)
    on left: 56 57, on right: 54 55 57
equality_expression (113)
    on left: 58 59 60, on right: 56 57 59 60
relational_expression (114)
    on left: 61 62 63 64 65, on right: 58 59 60 62 63 64 65
additive_expression (115)
    on left: 66 67 68, on right: 61 62 63 64 65 67 68
multiplicative_expression (116)
    on left: 69 70 71 72 73 74 75, on right: 66 67 68 70 71 72 73 74
    75
unary_expression (117)
    on left: 76 77 78 79, on right: 69 70 71 72 73 74 75 77 78 79
postfix_expression (118)
    on left: 80 81 82 83, on right: 76
primary_expression (119)
    on left: 84 85 86, on right: 47 80 81 82 83 89 90 91 93
primary_no_new_array (120)
    on left: 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103
    104 105 106 107, on right: 84 87
array_literal (121)
    on left: 108 109 110, on right: 101
array_creation (122)
    on left: 111 112 113 114, on right: 85
dimension_expression_list (123)
    on left: 115 116, on right: 111 112 113 114 116
dimension_expression (124)
    on left: 117, on right: 115 116
dimension_list (125)
    on left: 118 119, on right: 112 114 119
expression_list (126)
    on left: 120 121, on right: 109 110 121 151
statement (127)
    on left: 122 123 124 125 126 127 128 129 130 131 132 133 134,
    on right: 17 42 43
if_statement (128)
    on left: 135 136 137 138, on right: 123
elsif_list (129)
    on left: 139 140, on right: 137 138 140
elsif (130)
    on left: 141, on right: 139 140
label_opt (131)
    on left: 142 143, on right: 152 153 154 155
switch_statement (132)
    on left: 144, on right: 124
case_list (133)
    on left: 145 146, on right: 144 146
one_case (134)
    on left: 147, on right: 145 146
default_opt (135)
    on left: 148 149, on right: 144
case_expression_list (136)
    on left: 150 151, on right: 147
while_statement (137)
    on left: 152, on right: 125
for_statement (138)
    on left: 153, on right: 126
do_while_statement (139)
    on left: 154, on right: 127
foreach_statement (140)
    on left: 155, on right: 128
expression_opt (141)
    on left: 156 157, on right: 153 158
return_statement (142)
    on left: 158, on right: 129
identifier_opt (143)
    on left: 159 160, on right: 161 162
break_statement (144)
    on left: 161, on right: 130
continue_statement (145)
    on left: 162, on right: 131
try_statement (146)
    on left: 163 164 165, on right: 132
catch_list (147)
    on left: 166 167, on right: 163 165 167
catch_clause (148)
    on left: 169, on right: 166 167
@1 (149)
    on left: 168, on right: 169
throw_statement (150)
    on left: 170 171, on right: 133
declaration_statement (151)
    on left: 172 173 174 175, on right: 134
block (152)
    on left: 177 178, on right: 34 35 135 136 137 138 141 147 149 152
    153 154 155 163 164 165 169 207 208 215 216
@2 (153)
    on left: 176, on right: 177
class_definition (154)
    on left: 180 182 184 186, on right: 16
@3 (155)
    on left: 179, on right: 180
@4 (156)
    on left: 181, on right: 182
@5 (157)
    on left: 183, on right: 184
@6 (158)
    on left: 185, on right: 186
class_or_member_modifier_list (159)
    on left: 187 188, on right: 182 186 188 204 206 224 226
class_or_member_modifier (160)
    on left: 189 190 191 192, on right: 187 188
class_or_interface (161)
    on left: 193 194, on right: 180 182 184 186
extends (162)
    on left: 195 196, on right: 180 182 184 186
extends_list (163)
    on left: 197 198, on right: 196 198
member_declaration_list (164)
    on left: 199 200, on right: 180 182 200
member_declaration (165)
    on left: 201 202, on right: 199 200
method_member (166)
    on left: 203 204 205 206, on right: 201
method_function_definition (167)
    on left: 207 208 209 210, on right: 203 204
throws_clause (168)
    on left: 211 212, on right: 34 35 36 37 207 208 209 210 215 216
    217 218 227 228
exception_list (169)
    on left: 213 214, on right: 212 214
constructor_definition (170)
    on left: 215 216 217 218, on right: 205 206
access_modifier (171)
    on left: 219 220, on right: 189
initializer_opt (172)
    on left: 221 222, on right: 223 224 225 226
field_member (173)
    on left: 223 224 225 226, on right: 202
delegate_definition (174)
    on left: 227 228, on right: 18
enum_definition (175)
    on left: 229 230, on right: 19
enumerator_list (176)
    on left: 231 232, on right: 229 230 232
const_definition (177)
    on left: 233 234, on right: 20


state 0

    0 $accept: . translation_unit $end

    REQUIRE  shift, and go to state 1
    RENAME   shift, and go to state 2

    $default  reduce using rule 3 (initial_declaration)

    translation_unit     go to state 3
    initial_declaration  go to state 4
    require_list         go to state 5
    require_declaration  go to state 6
    rename_list          go to state 7
    rename_declaration   go to state 8


state 1

    9 require_declaration: REQUIRE . package_name SEMICOLON

    IDENTIFIER  shift, and go to state 9

    package_name  go to state 10


state 2

   14 rename_declaration: RENAME . package_name IDENTIFIER SEMICOLON

    IDENTIFIER  shift, and go to state 9

    package_name  go to state 11


state 3

    0 $accept: translation_unit . $end
    2 translation_unit: translation_unit . definition_or_statement

    $end              shift, and go to state 12
    INT_LITERAL       shift, and go to state 13
    DOUBLE_LITERAL    shift, and go to state 14
    STRING_LITERAL    shift, and go to state 15
    REGEXP_LITERAL    shift, and go to state 16
    IDENTIFIER        shift, and go to state 17
    IF                shift, and go to state 18
    SWITCH            shift, and go to state 19
    RETURN_T          shift, and go to state 20
    BREAK             shift, and go to state 21
    CONTINUE          shift, and go to state 22
    NULL_T            shift, and go to state 23
    LP                shift, and go to state 24
    LC                shift, and go to state 25
    SUB               shift, and go to state 26
    BIT_NOT           shift, and go to state 27
    TRUE_T            shift, and go to state 28
    FALSE_T           shift, and go to state 29
    EXCLAMATION       shift, and go to state 30
    TRY               shift, and go to state 31
    THROW             shift, and go to state 32
    VOID_T            shift, and go to state 33
    BOOLEAN_T         shift, and go to state 34
    INT_T             shift, and go to state 35
    DOUBLE_T          shift, and go to state 36
    STRING_T          shift, and go to state 37
    NATIVE_POINTER_T  shift, and go to state 38
    NEW               shift, and go to state 39
    CLASS_T           shift, and go to state 40
    INTERFACE_T       shift, and go to state 41
    PUBLIC_T          shift, and go to state 42
    PRIVATE_T         shift, and go to state 43
    VIRTUAL_T         shift, and go to state 44
    OVERRIDE_T        shift, and go to state 45
    ABSTRACT_T        shift, and go to state 46
    THIS_T            shift, and go to state 47
    SUPER_T           shift, and go to state 48
    DELEGATE          shift, and go to state 49
    FINAL             shift, and go to state 50
    ENUM              shift, and go to state 51
    CONST             shift, and go to state 52

    $default  reduce using rule 142 (label_opt)

    definition_or_statement        go to state 53
    basic_type_specifier           go to state 54
    identifier_type_specifier      go to state 55
    array_type_specifier           go to state 56
    type_specifier                 go to state 57
    function_definition            go to state 58
    expression                     go to state 59
    assignment_expression          go to state 60
    logical_or_expression          go to state 61
    logical_and_expression         go to state 62
    equality_expression            go to state 63
    relational_expression          go to state 64
    additive_expression            go to state 65
    multiplicative_expression      go to state 66
    unary_expression               go to state 67
    postfix_expression             go to state 68
    primary_expression             go to state 69
    primary_no_new_array           go to state 70
    array_literal                  go to state 71
    array_creation                 go to state 72
    statement                      go to state 73
    if_statement                   go to state 74
    label_opt                      go to state 75
    switch_statement               go to state 76
    while_statement                go to state 77
    for_statement                  go to state 78
    do_while_statement             go to state 79
    foreach_statement              go to state 80
    return_statement               go to state 81
    break_statement                go to state 82
    continue_statement             go to state 83
    try_statement                  go to state 84
    throw_statement                go to state 85
    declaration_statement          go to state 86
    class_definition               go to state 87
    class_or_member_modifier_list  go to state 88
    class_or_member_modifier       go to state 89
    class_or_interface             go to state 90
    access_modifier                go to state 91
    delegate_definition            go to state 92
    enum_definition                go to state 93
    const_definition               go to state 94


state 4

    1 translation_unit: initial_declaration . definition_or_statement

    INT_LITERAL       shift, and go to state 13
    DOUBLE_LITERAL    shift, and go to state 14
    STRING_LITERAL    shift, and go to state 15
    REGEXP_LITERAL    shift, and go to state 16
    IDENTIFIER        shift, and go to state 17
    IF                shift, and go to state 18
    SWITCH            shift, and go to state 19
    RETURN_T          shift, and go to state 20
    BREAK             shift, and go to state 21
    CONTINUE          shift, and go to state 22
    NULL_T            shift, and go to state 23
    LP                shift, and go to state 24
    LC                shift, and go to state 25
    SUB               shift, and go to state 26
    BIT_NOT           shift, and go to state 27
    TRUE_T            shift, and go to state 28
    FALSE_T           shift, and go to state 29
    EXCLAMATION       shift, and go to state 30
    TRY               shift, and go to state 31
    THROW             shift, and go to state 32
    VOID_T            shift, and go to state 33
    BOOLEAN_T         shift, and go to state 34
    INT_T             shift, and go to state 35
    DOUBLE_T          shift, and go to state 36
    STRING_T          shift, and go to state 37
    NATIVE_POINTER_T  shift, and go to state 38
    NEW               shift, and go to state 39
    CLASS_T           shift, and go to state 40
    INTERFACE_T       shift, and go to state 41
    PUBLIC_T          shift, and go to state 42
    PRIVATE_T         shift, and go to state 43
    VIRTUAL_T         shift, and go to state 44
    OVERRIDE_T        shift, and go to state 45
    ABSTRACT_T        shift, and go to state 46
    THIS_T            shift, and go to state 47
    SUPER_T           shift, and go to state 48
    DELEGATE          shift, and go to state 49
    FINAL             shift, and go to state 50
    ENUM              shift, and go to state 51
    CONST             shift, and go to state 52

    $default  reduce using rule 142 (label_opt)

    definition_or_statement        go to state 95
    basic_type_specifier           go to state 54
    identifier_type_specifier      go to state 55
    array_type_specifier           go to state 56
    type_specifier                 go to state 57
    function_definition            go to state 58
    expression                     go to state 59
    assignment_expression          go to state 60
    logical_or_expression          go to state 61
    logical_and_expression         go to state 62
    equality_expression            go to state 63
    relational_expression          go to state 64
    additive_expression            go to state 65
    multiplicative_expression      go to state 66
    unary_expression               go to state 67
    postfix_expression             go to state 68
    primary_expression             go to state 69
    primary_no_new_array           go to state 70
    array_literal                  go to state 71
    array_creation                 go to state 72
    statement                      go to state 73
    if_statement                   go to state 74
    label_opt                      go to state 75
    switch_statement               go to state 76
    while_statement                go to state 77
    for_statement                  go to state 78
    do_while_statement             go to state 79
    foreach_statement              go to state 80
    return_statement               go to state 81
    break_statement                go to state 82
    continue_statement             go to state 83
    try_statement                  go to state 84
    throw_statement                go to state 85
    declaration_statement          go to state 86
    class_definition               go to state 87
    class_or_member_modifier_list  go to state 88
    class_or_member_modifier       go to state 89
    class_or_interface             go to state 90
    access_modifier                go to state 91
    delegate_definition            go to state 92
    enum_definition                go to state 93
    const_definition               go to state 94


state 5

    4 initial_declaration: require_list . rename_list
    5                    | require_list .
    8 require_list: require_list . require_declaration

    REQUIRE  shift, and go to state 1
    RENAME   shift, and go to state 2

    $default  reduce using rule 5 (initial_declaration)

    require_declaration  go to state 96
    rename_list          go to state 97
    rename_declaration   go to state 8


state 6

    7 require_list: require_declaration .

    $default  reduce using rule 7 (require_list)


state 7

    6 initial_declaration: rename_list .
   13 rename_list: rename_list . rename_declaration

    RENAME  shift, and go to state 2

    $default  reduce using rule 6 (initial_declaration)

    rename_declaration  go to state 98


state 8

   12 rename_list: rename_declaration .

    $default  reduce using rule 12 (rename_list)


state 9

   10 package_name: IDENTIFIER .

    $default  reduce using rule 10 (package_name)


state 10

    9 require_declaration: REQUIRE package_name . SEMICOLON
   11 package_name: package_name . DOT IDENTIFIER

    SEMICOLON  shift, and go to state 99
    DOT        shift, and go to state 100


state 11

   11 package_name: package_name . DOT IDENTIFIER
   14 rename_declaration: RENAME package_name . IDENTIFIER SEMICOLON

    IDENTIFIER  shift, and go to state 101
    DOT         shift, and go to state 100


state 12

    0 $accept: translation_unit $end .

    $default  accept


state 13

   94 primary_no_new_array: INT_LITERAL .

    $default  reduce using rule 94 (primary_no_new_array)


state 14

   95 primary_no_new_array: DOUBLE_LITERAL .

    $default  reduce using rule 95 (primary_no_new_array)


state 15

   96 primary_no_new_array: STRING_LITERAL .

    $default  reduce using rule 96 (primary_no_new_array)


state 16

   97 primary_no_new_array: REGEXP_LITERAL .

    $default  reduce using rule 97 (primary_no_new_array)


state 17

   27 identifier_type_specifier: IDENTIFIER .
   29 array_type_specifier: IDENTIFIER . LB RB
   86 primary_expression: IDENTIFIER .
   88 primary_no_new_array: IDENTIFIER . LB expression RB
  143 label_opt: IDENTIFIER . COLON

    LB     shift, and go to state 102
    COLON  shift, and go to state 103

    IDENTIFIER  reduce using rule 27 (identifier_type_specifier)
    $default    reduce using rule 86 (primary_expression)


state 18

  135 if_statement: IF . LP expression RP block
  136             | IF . LP expression RP block ELSE block
  137             | IF . LP expression RP block elsif_list
  138             | IF . LP expression RP block elsif_list ELSE block

    LP  shift, and go to state 104


state 19

  144 switch_statement: SWITCH . LP expression RP case_list default_opt

    LP  shift, and go to state 105


state 20

  158 return_statement: RETURN_T . expression_opt SEMICOLON

    INT_LITERAL     shift, and go to state 13
    DOUBLE_LITERAL  shift, and go to state 14
    STRING_LITERAL  shift, and go to state 15
    REGEXP_LITERAL  shift, and go to state 16
    IDENTIFIER      shift, and go to state 106
    NULL_T          shift, and go to state 23
    LP              shift, and go to state 24
    LC              shift, and go to state 25
    SUB             shift, and go to state 26
    BIT_NOT         shift, and go to state 27
    TRUE_T          shift, and go to state 28
    FALSE_T         shift, and go to state 29
    EXCLAMATION     shift, and go to state 30
    NEW             shift, and go to state 39
    THIS_T          shift, and go to state 47
    SUPER_T         shift, and go to state 48

    $default  reduce using rule 156 (expression_opt)

    expression                 go to state 107
    assignment_expression      go to state 60
    logical_or_expression      go to state 61
    logical_and_expression     go to state 62
    equality_expression        go to state 63
    relational_expression      go to state 64
    additive_expression        go to state 65
    multiplicative_expression  go to state 66
    unary_expression           go to state 67
    postfix_expression         go to state 68
    primary_expression         go to state 69
    primary_no_new_array       go to state 70
    array_literal              go to state 71
    array_creation             go to state 72
    expression_opt             go to state 108


state 21

  161 break_statement: BREAK . identifier_opt SEMICOLON

    IDENTIFIER  shift, and go to state 109

    $default  reduce using rule 159 (identifier_opt)

    identifier_opt  go to state 110


state 22

  162 continue_statement: CONTINUE . identifier_opt SEMICOLON

    IDENTIFIER  shift, and go to state 109

    $default  reduce using rule 159 (identifier_opt)

    identifier_opt  go to state 111


state 23

  100 primary_no_new_array: NULL_T .

    $default  reduce using rule 100 (primary_no_new_array)


state 24

   92 primary_no_new_array: LP . expression RP

    INT_LITERAL     shift, and go to state 13
    DOUBLE_LITERAL  shift, and go to state 14
    STRING_LITERAL  shift, and go to state 15
    REGEXP_LITERAL  shift, and go to state 16
    IDENTIFIER      shift, and go to state 106
    NULL_T          shift, and go to state 23
    LP              shift, and go to state 24
    LC              shift, and go to state 25
    SUB             shift, and go to state 26
    BIT_NOT         shift, and go to state 27
    TRUE_T          shift, and go to state 28
    FALSE_T         shift, and go to state 29
    EXCLAMATION     shift, and go to state 30
    NEW             shift, and go to state 39
    THIS_T          shift, and go to state 47
    SUPER_T         shift, and go to state 48

    expression                 go to state 112
    assignment_expression      go to state 60
    logical_or_expression      go to state 61
    logical_and_expression     go to state 62
    equality_expression        go to state 63
    relational_expression      go to state 64
    additive_expression        go to state 65
    multiplicative_expression  go to state 66
    unary_expression           go to state 67
    postfix_expression         go to state 68
    primary_expression         go to state 69
    primary_no_new_array       go to state 70
    array_literal              go to state 71
    array_creation             go to state 72


state 25

  108 array_literal: LC . RC
  109              | LC . expression_list RC
  110              | LC . expression_list COMMA RC

    INT_LITERAL     shift, and go to state 13
    DOUBLE_LITERAL  shift, and go to state 14
    STRING_LITERAL  shift, and go to state 15
    REGEXP_LITERAL  shift, and go to state 16
    IDENTIFIER      shift, and go to state 106
    NULL_T          shift, and go to state 23
    LP              shift, and go to state 24
    LC              shift, and go to state 25
    RC              shift, and go to state 113
    SUB             shift, and go to state 26
    BIT_NOT         shift, and go to state 27
    TRUE_T          shift, and go to state 28
    FALSE_T         shift, and go to state 29
    EXCLAMATION     shift, and go to state 30
    NEW             shift, and go to state 39
    THIS_T          shift, and go to state 47
    SUPER_T         shift, and go to state 48
